fix: search dropdown mnue and notifications list alignment

--- a/frappe/public/css/desk-rtl.css
+++ b/frappe/public/css/desk-rtl.css
@@ -135,3 +135,15 @@ g.chart-legend {
 .datepicker {
   right: unset !important;
 }
+
+#awesomplete_list_1 {
+  top: 2.5em;
+}
+
+@media (max-width: 767.98px) {
+.dropdown-notifications .notifications-list {
+    min-width: 70vw !important;
+    width: calc(80vw - 60px) !important;
+    left: 0 !important;
+  }
+}
